# EPICS-librdkafka

./: .gitignore  Makefile
configure/: RELEASE
librdkafka/: CMakeLists.txt
librdkafka/examples/: CMakeLists.txt
librdkafka/src/: CMakeLists.txt  inttypes_win32.h  rdkafka.h  rdwin32.h  snappy.h
librdkafka/src-cpp/: CMakeLists.txt
librdkafka/tests/: CMakeLists.txt
librdkafka/win32/: librdkafka.autopkg.template
rdkafkaApp/src/: Makefile
